kubernetes/apps/flux-system/capacitor/app/httproute.yaml

---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-internal
  namespace: flux-system
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - capacitor.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
