kubernetes/apps/flux-system/capacitor/app/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-internal
  namespace: flux-system
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: "capacitor.sgc.driscoll.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
